--- a/package.json
+++ b/package.json
@@ -9,9 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/bottom-tabs": "^7.1.1",
+    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/stack": "^7.1.1",
+    "date-fns": "^4.1.0",
     "expo": "^53.0.11",
+    "expo-constants": "~16.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
+    "expo-media-library": "~16.0.5",
+    "expo-notifications": "~0.28.16",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-gesture-handler": "^2.22.1",
+    "react-native-maps": "^1.20.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "^5.0.1",
+    "react-native-screens": "^4.2.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.7.0"
   },
   "devDependencies": {
