--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "timeclock-app",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -9,33 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-navigation/bottom-tabs": "^7.1.1",
-    "@react-navigation/native": "^7.0.18",
-    "@react-navigation/stack": "^7.1.1",
-    "date-fns": "^4.1.0",
-    "expo": "^53.0.11",
-    "expo-constants": "~16.0.2",
+    "@expo/metro-runtime": "^5.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "date-fns": "^3.6.0",
+    "expo": "~51.0.28",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
-    "expo-media-library": "~16.0.5",
-    "expo-notifications": "~0.28.16",
-    "react": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-gesture-handler": "^2.22.1",
-    "react-native-maps": "^1.20.0",
-    "react-native-modal": "^13.0.1",
-    "react-native-paper": "^5.12.5",
-    "react-native-safe-area-context": "^5.0.1",
-    "react-native-screens": "^4.2.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-vision-camera": "^4.7.0"
+    "expo-media-library": "~16.0.4",
+    "expo-sharing": "~12.0.1",
+    "react": "18.2.0",
+    "react-dom": "^19.1.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-vision-camera": "^4.0.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "babel-preset-expo": "^13.2.0"
+    "@babel/core": "^7.20.0"
   },
-  "packageManager": "yarn@4.2.2+sha512.c44e283c54e02de9d1da8687025b030078c1b9648d2895a65aab8e64225bfb7becba87e1809fc0b4b6778bbd47a1e2ab6ac647de4c5e383a53a7c17db6c3ff4b",
   "private": true
 }
